Delete Work page content, and fix NavBar layout bug

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -14,9 +14,13 @@ a:link {
   text-decoration: none;
 }
 
-header a {
+header h1 {
   grid-column-start: 2;
+}
+
+.link {
   color: rgb(130, 255, 210);
+  text-decoration: none;
 }
 
 .nav-toggle {
@@ -44,20 +48,19 @@ header a {
 }
 
 nav {
-  transform: scale(0, 1);
-  transform-origin: left;
-  transition: transform 200ms ease-in-out;
-}
-
-nav {
   position: absolute;
   z-index: 2;
-  width: 10rem;
+  width: 12rem;
   height: 1000%;
   text-align: left;
   top: 100%;
-  left: 0;
+  left: -12rem;
   background-color: rgb(75, 75, 75);
+  transition: 200ms;
+}
+
+#nav.active{
+  left: 0;
 }
 
 .list-items {
@@ -75,14 +78,12 @@ nav li {
 nav a {
   text-decoration: none;
   color: aliceblue;
-  font-size: 1rem;
+  font-size: 1.2rem;
   text-transform: uppercase;
-  opacity: 0;
-  transition: opacity 50ms ease-in-out;
 }
 
 nav a:hover {
-  color: rgb(189, 89, 89);
+  color: rgb(190, 90, 90);
 }
 
 @media screen and (min-width: 600px) {
@@ -99,7 +100,7 @@ nav a:hover {
     align-items: center;
   }
 
-  header a {
+  header h1 {
     grid-column: 2 / 3;
   }
 
